--- a/index.css
+++ b/index.css
@@ -26,5 +26,25 @@ a {
 
 .nav_logo {
   font-size: 25px;
-  /* color: #fff; */
+  color: #fff;
 }
+/* Home */
+.home {
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    background-image: url("bg.jpg");
+    background-size: cover;
+    background-position: center;
+  }
+  .home::before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 100;
+    opacity: 1;
+    pointer-events: auto;
+    transition: all 0.5s ease-out;
+  }
