--- a/index.css
+++ b/index.css
@@ -48,3 +48,58 @@ a {
     pointer-events: auto;
     transition: all 0.5s ease-out;
   }
+  .form_container {
+    position: fixed;
+    max-width: 400px;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    z-index: 101;
+    background: #fff;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 15px 25px rgba(231, 12, 12, 0.795);
+    opacity: 1;
+    pointer-events: auto;
+    
+  }
+  
+  .form_container h2 {
+    font-size: 30px;
+    color: #0b0217;
+    text-align: center;
+  }
+  .input_box {
+    position: relative;
+    margin-top: 30px;
+    width: 100%;
+    height: 40px;
+  }
+  .input_box input {
+    height: 100%;
+    width: 100%;
+    border: none;
+    outline: none;
+    padding: 0 30px;
+    color: #333;
+    transition: all 0.2s ease;
+    border-bottom: 1.5px solid #aaaaaa;
+  }
+  .input_box input:focus {
+    border-color: #7d2ae8;
+  }
+  
+  .btn {
+    text-align: center;
+  }
+  
+  .form_container .button {
+    background: #7d2ae8;
+    margin-top: 40px;
+    padding: 15px;
+    border-radius: 10px;
+    border: 2px solid #fff;
+    cursor: pointer;
+    color: white;
+  }
